--- a/index2.html
+++ b/index2.html
@@ -6,8 +6,20 @@
     <meta name="keywords" content="HTML, CSS">
     <meta name="description" content="...">
     <title>Document</title>
+    <style>em {
+        color: blue;
+        font-style: normal;
+    } </style>
+    
 </head>
 <body>
+    <h1>Heading</h1>
+    <h2>HTML</h2>
+    <p>HTML Tutorial</p>
+    <h3>Heading</h3>
+    <h4>Heading</h4>
+    <h5>Heading</h5>
+    <h6>Heading</h6>
     <p>I love to learn <em>HTML!</em></p>
 </body>
 </html>
