--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="HTML, CSS">
-    <meta name="description" content="Test">
+    <meta name="description" content="Test...">
     <title>Document</title>
     <style>em {
         color: blue;
